--- a/index.html
+++ b/index.html
@@ -93,21 +93,10 @@
 
     <!-- Video -->
     <div class="RepV">
-        <h2>Nuevo Servidor De Minecraft 1.8-1.16 | Se Busca Staff!</h2>
-        <iframe id="REPV" src="https://www.youtube.com/embed/fMN2QG9rLi4" frameborder="0"></iframe>
+        <h2>!!!!MINECRAFT 1.16!!!!</h2>
+        <iframe id="REPV" src="https://www.youtube.com/embed/8y5fyy_f5PY" frameborder="0"></iframe>
         <div class="Descrip">
-            <p>Hola Chicos Hoy Les Invito A esta Nueva Network De Minecraft 1.8x - 1.16x!</p>
-            <p class="invisible">.</p>
-            <p>Buscamos Staff y Youtubers</p>
-            <p class="invisible">.</p>
-            <p>Discord: <a href="https://discord.gg/gHQSruzyeT">https://discord.gg/gHQSruzyeT</a></p>
-            <p>Tienda: <a href="https://tienda.talexmc.cf">https://tienda.talexmc.cf</a></p>
-            <p>ip: mc.talexmc.cf (mantenimiento)</p>
-            <p>ts3: ts.talexmc.cf (próximamente)</p>
-            <p class="invisible">.</p>
-            <p>tags
-            nuevo server de minecraft, minecraft, se busca Staff, Staff series</p>
-            <p class="invisible">.</p>
+            <p>...</p>
         </div>
     </div>
     
