--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 <!-- anuncio1 -->
 
 <body>
-
     <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://talexmc.github.io/R8/" nonce="riZfqJnb"></script>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v10.0" nonce="4bSKQ1FC"></script>
 
     <div class="border-decoration">
         <p class="invisible">.</p>
@@ -102,7 +101,7 @@
     
 
     <div class="comentarios">
-        <div class="fb-comments" data-href="http://talexmc.github.io/3/" data-width="100%" data-numposts="7"></div>
+        <div class="fb-comments" data-href="http://talexmc.github.io/R8" data-width="100%" data-numposts="7"></div>
     </div>
     
 
